--- a/chat-cloud.html
+++ b/chat-cloud.html
@@ -24,12 +24,12 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="javascript:history.back();">
+        <a href="chats.html">
           <i class="fa-solid fa-angle-left fa-2x"></i>
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">이구름</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
@@ -41,11 +41,11 @@
       <div class="chat__timestamp">Tuesday, June 30, 2020</div>
 
       <div class="message-row">
-        <img src="https://avatars.githubusercontent.com/u/3612017" />
+        <img src="img/cloud2.jpg" />
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
+          <span class="message__author">이구름</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble">밥 줘</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -54,8 +54,19 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Hi nice to meet you!</span>
-            <span class="message__time">21:27</span>
+            <span class="message__bubble">아까 줬잖아</span>
+            <span class="message__time">21:28</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="message-row">
+        <img src="img/cloud2.jpg" />
+        <div class="message-row__content">
+          <span class="message__author">이구름</span>
+          <div class="message__info">
+            <span class="message__bubble">또 줘</span>
+            <span class="message__time">21:28</span>
           </div>
         </div>
       </div>
@@ -71,6 +82,12 @@
         <button><i class="fa-solid fa-arrow-up"></i></button>
       </div>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+    <div id="no-landscape">
+      <span>Please change your phone to portrait mode</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6710d8dddc.js"
       crossorigin="anonymous"
