--- a/chats.html
+++ b/chats.html
@@ -28,12 +28,14 @@
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
     <main class="main-screen">
-      <a href="chat.html">
+      <a href="chat-nico.html">
         <div class="user-component chats-space">
           <div class="user-component__column">
             <img
@@ -53,11 +55,12 @@
           </div>
         </div>
       </a>
-      <a href="#">
+
+      <a href="chat-cloud.html">
         <div class="user-component chats-space">
           <div class="user-component__column">
             <img
-              src="img/dog.jpg"
+              src="img/cloud2.jpg"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
@@ -71,7 +74,7 @@
           </div>
         </div>
       </a>
-      <a href="#">
+      <a href="chat-carrot.html">
         <div class="user-component chats-space">
           <div class="user-component__column">
             <img
@@ -91,7 +94,7 @@
           </div>
         </div>
       </a>
-      <a href="#">
+      <a href="chat-bro.html">
         <div class="user-component chats-space">
           <div class="user-component__column">
             <img
@@ -139,7 +142,12 @@
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+    <div id="no-landscape">
+      <span>Please change your phone to portrait mode</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6710d8dddc.js"
       crossorigin="anonymous"
