--- a/find.html
+++ b/find.html
@@ -28,7 +28,7 @@
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
 
         <span
-          ><i class="fa-solid fa-gear fa-lg"></i>
+          ><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a>
           <div class="screen-header__point alert__point"></div>
         </span>
       </div>
@@ -115,7 +115,12 @@
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+    <div id="no-landscape">
+      <span>Please change your phone to portrait mode</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6710d8dddc.js"
       crossorigin="anonymous"
