--- a/friends.html
+++ b/friends.html
@@ -27,7 +27,9 @@
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
@@ -103,7 +105,16 @@
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
 
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+    <div id="no-landscape">
+      <span>Please change your phone to portrait mode</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6710d8dddc.js"
       crossorigin="anonymous"
