--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       <input type="submit" value="Log In" />
       <a href="#">Find kokoa Account or Password</a>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+    <div id="no-landscape">
+      <span>Please change your phone to portrait mode</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6710d8dddc.js"
       crossorigin="anonymous"
