--- a/more.html
+++ b/more.html
@@ -116,7 +116,12 @@
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+    <div id="no-landscape">
+      <span>Please change your phone to portrait mode</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6710d8dddc.js"
       crossorigin="anonymous"
