--- a/settings.html
+++ b/settings.html
@@ -26,14 +26,14 @@
       <div class="alt-header__column">
         <a href="javascript:history.back();">
           <!-- more.html -->
-          <i class="fa-solid fa-angle-left fa-2x"></i>
+          <i class="fa-solid fa-angle-left fa-lg"></i>
         </a>
       </div>
       <div class="alt-header__column">
         <h1 class="alt-header__title">Settings</h1>
       </div>
       <div class="alt-header__column">
-        <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+        <i class="fa-solid fa-magnifying-glass fa-lg"></i>
       </div>
     </header>
 
@@ -89,7 +89,15 @@
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+    <div id="no-landscape">
+      <span
+        >Please change your phone to portrait mode
+        <i class="fa-solid fa-image-portrait"></i
+      ></span>
+    </div>
     <script
       src="https://kit.fontawesome.com/6710d8dddc.js"
       crossorigin="anonymous"
