--- a/friends.html
+++ b/friends.html
@@ -110,7 +110,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is super big :(</span>
+      <span>Your screen is too big 😭 :(</span>
     </div>
     <div id="no-landscape">
       <span>Please change your phone to portrait mode</span>
